--- a/Computer_Graphics/KG_LABA4/Laba4/Laba4/Laba4.csproj
+++ b/Computer_Graphics/KG_LABA4/Laba4/Laba4/Laba4.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StandartWorker.cs" />
+    <Compile Include="Tester.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
