add OOP LABA 2 v.2

--- a/OOP/OOP_LABA_2/CMakeLists.txt
+++ b/OOP/OOP_LABA_2/CMakeLists.txt
@@ -3,5 +3,5 @@ project(OOP_LABA_2)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp BaseForList.cpp BaseForList.h MyList.cpp MyList.h MyIterator.cpp MyIterator.h MException.h)
+set(SOURCE_FILES main.cpp BaseForList.cpp BaseForList.h MyList_code.h MyList.h MException.h base_iterator.h Iterators.h base_iterator_code.h iterators_code.h st.h Node.cpp Node.h)
 add_executable(OOP_LABA_2 ${SOURCE_FILES})
